--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ h3 {
 }
 
 h4 {
-  font-size: 2em;
+  font-size: 1.25em;
   font-weight: bold;
-  line-height: 1.5em;
+  line-height: 1.05em;
 }
 
 h5 {
@@ -160,12 +160,13 @@ p {
 
 .beneficios-lista {
   /* background-color: blue; */
-  margin-left: 16.25em;
-  margin-right: 16.25em;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-top: 4em;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-end;
+  /* flex-wrap: wrap; */
 }
 
 .beneficios-item {
@@ -178,7 +179,7 @@ p {
 /* --- SECTION 2 - FUNCIONALIDADES --- */
 .funcionalidades {
   margin-bottom: 8em;
-  margin-left: 11.25em;
+  margin-left: 10%;
 }
 
 .funcionalidades h2 {
@@ -193,7 +194,7 @@ p {
 
 .funcionalidades div img {
   /*mockup img*/
-  margin-right: 11.25em;
+  margin-right: 5%;
   max-width: 50%;
 }
 
@@ -350,6 +351,18 @@ footer .container {
     font-size: 1.5em;
   }
 
+  h3 {
+    font-size: 1em;
+  }
+
+  h4 {
+    font-size: 1em;
+  }
+
+  p {
+    font-size: 0.8em;
+  }
+
   /* botoes e sombras */
   .btn {
     margin: 0 auto;
@@ -376,6 +389,22 @@ footer .container {
   .welcome .title h2 {
     text-align: center;
   }
+
+  /* --- SECTION 1 - BENEFICIOS --- */
+  .beneficios-lista {
+    /* background-color: blue; */
+    margin-left: 1.875em;
+    margin-right: 1.875em;
+  }
+
+  .beneficios-item {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
+  .beneficios-item img {
+    max-width: 70%;
+  }
 }
 
 /* -- SMARTPHONE --- */
@@ -388,6 +417,15 @@ footer .container {
 
   h2 {
     font-size: 1.5em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.125em;
+  }
+
+  p {
+    font-size: 0.875em;
   }
 
   /* botoes e sombras */
@@ -416,5 +454,21 @@ footer .container {
   .welcome img {
     margin: 1.875em 0;
     max-width: 80%;
+  }
+
+  /* --- SECTION 1 - BENEFICIOS --- */
+  .beneficios {
+    margin: 4em 0em 4em 0em;
+    padding: 4em 0em 4em 0em;
+  }
+  .beneficios-lista {
+    background-color: blue;
+    flex-wrap: wrap;
+    margin-top: 2em;
+  }
+
+  .beneficios-item {
+    margin-top: 2em;
+    flex-basis: 100%;
   }
 }
